# tinyrenderer

./: CMakeLists.txt  main.cpp
